# testdata/chi/products/models.go
@@ -1,0 +1,12 @@
+package products
+
+type Product struct {
+	ID    string  `json:"id"`
+	Name  string  `json:"name"`
+	Price float64 `json:"price"`
+}
+
+type CreateProductRequest struct {
+	Name  string  `json:"name"`
+	Price float64 `json:"price"`
+}
