# testdata/chi/users/models.go
@@ -1,0 +1,10 @@
+package users
+
+type User struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+}
+
+type CreateUserRequest struct {
+	Name string `json:"name"`
+}
